# Narrow_and_Crowded_Spaces

./: README.md  图解.nebo
Parking/: Parking.sln
Parking/Parking/: Parking.vcxproj
parking_planning_ws/devel/: .catkin  .rosinstall  local_setup.sh
parking_planning_ws/devel/lib/pkgconfig/: planning.pc
parking_planning_ws/devel/lib/planning/: run_planning
parking_planning_ws/devel/share/planning/cmake/: planning-msg-paths.cmake  planningConfig.cmake
parking_planning_ws/devel/share/roseus/ros/planning/: manifest.l
parking_planning_ws/src/planning/: CMakeLists.txt  package.xml
parking_planning_ws/src/planning/app/: run_planning.cpp
parking_planning_ws/src/planning/include/planning/: costmap_subscriber.h  display_tool.h  display_tools.h  goal_pose_subscriber.h  init_pose_subscriber.h  planning_method.h  planning_method_flow.h  rs_path.h  state_node.h  timer.h  trajectory_optimizer.h  type.h
parking_planning_ws/src/planning/launch/: run_planning.launch
parking_planning_ws/src/planning/maps/: map.yaml
parking_planning_ws/src/planning/model/car_model/: default.urdf
parking_planning_ws/src/planning/rviz/: display_planning.rviz
parking_planning_ws/src/planning/src/: costmap_subscriber.cpp  goal_pose_subscriber.cpp  init_pose_subscriber.cpp  planning_method.cpp  planning_method_flow.cpp  rs_path.cpp
ros的练习程序/demo3_ws/devel/lib/pkgconfig/: plumbing_pub_sub.pc
ros的练习程序/demo3_ws/devel/lib/plumbing_pub_sub/: demo1_puh
ros的练习程序/demo3_ws/devel/share/plumbing_pub_sub/cmake/: plumbing_pub_subConfig.cmake
ros的练习程序/demo3_ws/src/plumbing_pub_sub/: CMakeLists.txt
ros的练习程序/demo3_ws/src/plumbing_pub_sub/src/: demo1_puh.cpp  demo3_pub_person.cpp
ros的练习程序/demo4_ws/devel/lib/plumbing_server_client/: demo2_client
ros的练习程序/demo4_ws/src/plumbing_server_client/src/: demo2_client.cpp
